[feat] 增加最小客户端权限域。
